--- a/catalog-item.html
+++ b/catalog-item.html
@@ -5,165 +5,110 @@
     <title>HTML Academy: Каталог товаров</title>
   </head>
   <body>
-  	<header class="main-header">
-  		<div class="header-logo">
-  			<img class="logo" src="http://placehold.it/150x100" alt="Барбершоп «Бородинский»">
-  		</div>
-  		<div class="container">
-  			<nav class="main-navigation">
-  			<ul>
-  				<li>
-  					<a href="#">Информация</a>
-  				</li>
-  				<li>
-  					<a href="#">Новости</a>
-  				</li>
-  				<li>
-  					<a href="#">Прайс-лист</a>
-  				</li>
-  				<li>
-  					<a href="#">Магазин</a>
-  				</li>
-  				<li>
-  					<a href="#">Контакты</a>
-  				</li>
-  			</ul>
-  			</nav>
-  			<div class="user-block">
-  				<a class="login" href="#">Вход</a>
-  			</div>
-  		</div>
-  	</header>
-  	<main class="container">
-  		<div class="breadcrumbs">
-  			<h1>Средства для ухода</h1>
-  			<ul>
-  				<li>
-  					<a href="#">Главная</a>
-  				</li>
-  				<li>
-  					<a href="#">Магазин</a>
-  				</li>
-  				<li>
-  					<a href="#">Средства для ухода</a>
-  				</li>
-  			</ul>
-  		</div>
-  		<div class="categories">
-  			<div class="categories-up">
-  				<h2 class="categories-title">Производители:</h2>
-  				<label>
-	  				<input type="checkbox" name="producers-one">
-	  				Baxter of california
-  				</label>
-  				<label>
-	  				<input type="checkbox" name="producers-two">
-	  				Mr Natty
-  				</label>
-  				<label>
-	  				<input type="checkbox" name="producers-three">
-	  				Suavecito
-  				</label>
-  				<label>
-	  				<input type="checkbox" name="producers-four">
-	  				Malin goetz
-  				</label>
-  				<label>
-	  				<input type="checkbox" name="producers-five">
-	  				Murray`s
-  				</label>
-  				<label>
-	  				<input type="checkbox" name="producers-six">
-	  				American crew
-  				</label>
-  			</div>
-  			<div class="categories-down">
-  				<h2 class="categories-title">Группа товаров:</h2>
-  				<label>
-  					<input type="radio" name ="product" value="a" checked>
-  					Бритвенные принадлежности
-  				</label>
-  				<label>
-  					<input type="radio" name ="product" value="b">
-  					Средства для ухода
-  				</label>
-  				<label>
-  					<input type="radio" name ="product" value="c">
-  					Аксессуары
-  				</label>
-  				<a class="categories-btn" href="#">Показать</a>
-  			</div>
-  		</div>
-  		<div class="catalog-items">
-  			<div class="catalog-item">
-  				<img src="http://placehold.it/150x100">
-  				<p>Набор для путешествий<br>
-  				"Baxter of california"</p>
-  				<p class="price">2 900 руб.</p>
-  				<a href="#">Купить</a>
-  			</div>
-  			<div class="catalog-item">
-  				<img src="http://placehold.it/150x100">
-  				<p>Увлажняющий кондиционер<br>
-  				"Baxter of california"</p>
-  				<p class="price">750 руб.</p>
-  				<a href="#">Купить</a>
-  			</div>
-  			<div class="catalog-item">
-  				<img src="http://placehold.it/150x100">
-  				<p>Гель для волос<br>
-  				"Suavecito"</p>
-  				<p class="price">290 руб.</p>
-  				<a href="#">Купить</a>
-  			</div>
-  			<div class="catalog-item">
-  				<img src="http://placehold.it/150x100">
-  				<p>Глина для укладки волос<br>
-  				"American crew"</p>
-  				<p class="price">500 руб.</p>
-  				<a href="#">Купить</a>
-  			</div>
-  			<div class="catalog-item">
-  				<img src="http://placehold.it/150x100">
-  				<p>Гель для волос<br>
-  				"American crew"</p>
-  				<p class="price">300 руб.</p>
-  				<a href="#">Купить</a>
-  			</div>
-  			<div class="catalog-item">
-  				<img src="http://placehold.it/150x100">
-  				<p>Набор для бритья<br>
-  				"Baxter of california"</p>
-  				<p class="price">3 900 руб.</p>
-  				<a href="#">Купить</a>
-  			</div>
-  		</div>
-  		<div class="catalog-btns">
-  			<a href="#">1</a>
-  			<a href="#">2</a>
-  			<a href="#">3</a>
-  			<a href="#">4</a>
-  		</div>
-  	</main>
-  	<footer class="main-footer">
-  		<div class="container">
-  			<div class="footer-contacts">
-	  			<p>Барбершоп «Бородинский»<br>
-	          	Адрес: г. Санкт-Петербург, Б. Конюшенная, д. 19/8<br>
-	          	<a href="#">Как нас найти?</a><br>
-	          	Телефон: +7 (812) 666-02-66</p>
-  			</div>
-  			<div class="footer-social">
-  				<p>Давайте дружить!</p>
-		        <a class="social-btn social-btn-vk" href="#">Вконтакте</a>
-		        <a class="social-btn social-btn-fb" href="#">Фейсбук</a>
-		        <a class="social-btn social-btn-inst" href="#">Инстаграм</a>
-  			</div>
-  			<div class="footer-copyright">
-  				<p>Разработано:</p>
-          		<a class="copyright-btn" href="#">HTML Academy</a>
-  			</div>
-  		</div>
-  	</footer>
+    <header class="main-header">
+      <div class="header-logo">
+        <img class="logo" src="http://placehold.it/150x100" alt="Барбершоп «Бородинский»">
+      </div>
+      <div class="container">
+        <nav class="main-navigation">
+        <ul>
+          <li>
+            <a href="#">Информация</a>
+          </li>
+          <li>
+            <a href="#">Новости</a>
+          </li>
+          <li>
+            <a href="#">Прайс-лист</a>
+          </li>
+          <li>
+            <a href="#">Магазин</a>
+          </li>
+          <li>
+            <a href="#">Контакты</a>
+          </li>
+        </ul>
+        </nav>
+        <div class="user-block">
+          <a class="login" href="#">Вход</a>
+        </div>
+      </div>
+    </header>
+    
+    <main class="container">
+      <div class="breadcrumbs">
+        <h1>Набор для путешествий "Baxter of california"</h1>
+        <ul>
+          <li>
+            <a href="#">Главная</a>
+          </li>
+          <li>
+            <a href="#">Прайс-лист</a>
+          </li>
+          <li>
+            <a href="#">Средства для ухода</a>
+          </li>
+          <li>
+            <a href="#">Набор для путешествий "Baxter of california"</a>
+          </li>
+        </ul>
+      </div>
+      <div class="item-gallery">
+        <img src="http://placehold.it/150x100" alt="Набор для путешествий Baxter of california">
+        <img src="http://placehold.it/150x100" alt="Набор для путешествий Baxter of california">
+        <img src="http://placehold.it/150x100" alt="Набор для путешествий Baxter of california">
+        <img src="http://placehold.it/150x100" alt="Набор для путешествий Baxter of california">
+      </div>
+      <div class="information">
+        <div class="information-up">
+          <p>Есть в наличии</p>
+          <p class="item-article">Артикул: Dexter-AE</p>
+          <p>Travel Kit – необходимый аксессуар во время любого путешествия. В аккуратной кожаной сумке находится все, что нужно для бритья и ухода за кожей во время рабочей поездки или отдыха: средство для умывания, увлажняющий крем, крем для бритья, крем после бритья, шампунь. Набор также может стать отличным подарком.</p>
+          <p class="price">2 900 руб.</p>
+          <a href="#">Купить</a>
+        </div>
+        <div class="information-down">
+          <h2>В набор входит:</h2>
+          <ul>
+            <li>
+              <p>Средство для умывания(50мл)</p>
+            </li>
+            <li>
+              <p>Увлажняющий крем(50мл)</p>
+            </li>
+            <li>
+              <p>Крем для бритья(50мл)</p>
+            </li>
+            <li>
+              <p>Крем после бритья, шампунь(50мл)</p>
+            </li>
+            <li>
+              <p>Удобная кожаная косметичка</p>
+            </li>
+          </ul>
+        </div>
+      </div>
+    </main>
+
+    <footer class="main-footer">
+      <div class="container">
+        <div class="footer-contacts">
+          <p>Барбершоп «Бородинский»<br>
+              Адрес: г. Санкт-Петербург, Б. Конюшенная, д. 19/8<br>
+              <a href="#">Как нас найти?</a><br>
+              Телефон: +7 (812) 666-02-66</p>
+        </div>
+        <div class="footer-social">
+          <p>Давайте дружить!</p>
+            <a class="social-btn social-btn-vk" href="#">Вконтакте</a>
+            <a class="social-btn social-btn-fb" href="#">Фейсбук</a>
+            <a class="social-btn social-btn-inst" href="#">Инстаграм</a>
+        </div>
+        <div class="footer-copyright">
+          <p>Разработано:</p>
+              <a class="copyright-btn" href="#">HTML Academy</a>
+        </div>
+      </div>
+    </footer>
   </body>
 </html>
