--- a/catalog-item.html
+++ b/catalog-item.html
@@ -96,7 +96,7 @@
           <p>Барбершоп «Бородинский»<br>
               Адрес: г. Санкт-Петербург, Б. Конюшенная, д. 19/8<br>
               <a href="#">Как нас найти?</a><br>
-              Телефон: +7 (812) 666-02-66</p>
+              <a href="tel:+78126660266">Телефон: +7 (812) 666-02-66</a></p>
         </div>
         <div class="footer-social">
           <p>Давайте дружить!</p>
