--- a/catalog-item.html
+++ b/catalog-item.html
@@ -7,7 +7,7 @@
   <body>
     <header class="main-header">
       <div class="header-logo">
-        <img class="logo" src="http://placehold.it/150x100" alt="Барбершоп «Бородинский»">
+        <a class="logo" href="/">Барбершоп "Бородинский"</a> 
       </div>
       <div class="container">
         <nav class="main-navigation">
@@ -36,8 +36,8 @@
     </header>
     
     <main class="container">
+      <h1>Набор для путешествий "Baxter of california"</h1>
       <div class="breadcrumbs">
-        <h1>Набор для путешествий "Baxter of california"</h1>
         <ul>
           <li>
             <a href="#">Главная</a>
@@ -61,9 +61,14 @@
       </div>
       <div class="information">
         <div class="information-up">
-          <p>Есть в наличии</p>
-          <p class="item-article">Артикул: Dexter-AE</p>
-          <p>Travel Kit – необходимый аксессуар во время любого путешествия. В аккуратной кожаной сумке находится все, что нужно для бритья и ухода за кожей во время рабочей поездки или отдыха: средство для умывания, увлажняющий крем, крем для бритья, крем после бритья, шампунь. Набор также может стать отличным подарком.</p>
+          <div class="information-title">
+            <p>Есть в наличии</p>
+            <p class="item-article">Артикул: Dexter-AE</p>
+          </div>
+          <p>Travel Kit – необходимый аксессуар во время любого путешествия. 
+          В аккуратной кожаной сумке находится все, что нужно для бритья и ухода за кожей во время рабочей поездки или отдыха: 
+          средство для умывания, увлажняющий крем, крем для бритья, крем после бритья, шампунь. 
+          Набор также может стать отличным подарком.</p>
           <p class="price">2 900 руб.</p>
           <a href="#">Купить</a>
         </div>
