--- a/catalog.html
+++ b/catalog.html
@@ -7,7 +7,7 @@
   <body>
   	<header class="main-header">
   		<div class="header-logo">
-  			<a class="logo" href="/"></a> 
+  			<a class="logo" href="/">Барбершоп "Бородинский"</a> 
   		</div>
   		<div class="container">
   			<nav class="main-navigation">
@@ -50,53 +50,53 @@
   			</ul>
   		</div>
   		<div class="categories">
-  			<div class="categories-up">
-  				<h2 class="categories-title">Производители:</h2>
-  				<label>
-	  				<input type="checkbox" name="producers-one">
-	  				Baxter of california
-  				</label>
-  				<label>
-	  				<input type="checkbox" name="producers-two">
-	  				Mr Natty
-  				</label>
-  				<label>
-	  				<input type="checkbox" name="producers-three">
-	  				Suavecito
-  				</label>
-  				<label>
-	  				<input type="checkbox" name="producers-four">
-	  				Malin goetz
-  				</label>
-  				<label>
-	  				<input type="checkbox" name="producers-five">
-	  				Murray`s
-  				</label>
-  				<label>
-	  				<input type="checkbox" name="producers-six">
-	  				American crew
-  				</label>
-  			</div>
-  			<div class="categories-down">
-  				<h2 class="categories-title">Группа товаров:</h2>
-  				<form action="#" method="post">
+  			<form action="#" method="post">
+	  			<div class="categories-up">
+	  				<h2 class="categories-title">Производители:</h2>
 	  				<label>
-	  					<input type="radio" name ="product" value="a" checked>
-	  					Бритвенные принадлежности
+		  				<input type="checkbox" name="producers-one">
+		  				Baxter of california
 	  				</label>
 	  				<label>
-	  					<input type="radio" name ="product" value="b">
-	  					Средства для ухода
+		  				<input type="checkbox" name="producers-two">
+		  				Mr Natty
 	  				</label>
 	  				<label>
-	  					<input type="radio" name ="product" value="c">
-	  					Аксессуары
+		  				<input type="checkbox" name="producers-three">
+		  				Suavecito
 	  				</label>
 	  				<label>
-	  					<input class="categories-btn" type="submit" name="show">Показать</a>
+		  				<input type="checkbox" name="producers-four">
+		  				Malin goetz
 	  				</label>
-  				</form>
-  			</div>
+	  				<label>
+		  				<input type="checkbox" name="producers-five">
+		  				Murray`s
+	  				</label>
+	  				<label>
+		  				<input type="checkbox" name="producers-six">
+		  				American crew
+	  				</label>
+	  			</div>
+	  			<div class="categories-down">
+	  				<h2 class="categories-title">Группа товаров:</h2>
+		  			<label>
+		  				<input type="radio" name ="product" value="a" checked>
+		  				Бритвенные принадлежности
+		  			</label>
+		  			<label>
+		  				<input type="radio" name ="product" value="b">
+		  				Средства для ухода
+		  			</label>
+		  			<label>
+		  				<input type="radio" name ="product" value="c">
+		  				Аксессуары
+		  			</label>
+		  			<label>
+		  				<input class="categories-btn" type="submit" name="show">Показать</a>
+		  			</label>
+	  			</div>
+  			</form>
   		</div>
   		<div class="catalog-items">
   			<div class="catalog-item">
