--- a/catalog-item.html
+++ b/catalog-item.html
@@ -5,39 +5,40 @@
     <title>HTML Academy: Каталог товаров</title>
   </head>
   <body>
-  	<header class="main-header">
-  		<div class="header-logo">
-  			<img class="logo" src="http://placehold.it/150x100" alt="Барбершоп «Бородинский»">
-  		</div>
-  		<div class="container">
-  			<nav class="main-navigation">
-  			<ul>
-  				<li>
-  					<a href="#">Информация</a>
-  				</li>
-  				<li>
-  					<a href="#">Новости</a>
-  				</li>
-  				<li>
-  					<a href="#">Прайс-лист</a>
-  				</li>
-  				<li>
-  					<a href="#">Магазин</a>
-  				</li>
-  				<li>
-  					<a href="#">Контакты</a>
-  				</li>
-  			</ul>
-  			</nav>
-  			<div class="user-block">
-  				<a class="login" href="#">Вход</a>
-  			</div>
-  		</div>
-  	</header>
+    <link href="css/style.css" rel="stylesheet">
+    <header class="main-header">
+      <div class="header-logo">
+        <a class="logo" href="/">Барбершоп "Бородинский"</a> 
+      </div>
+      <div class="container">
+        <nav class="main-navigation">
+        <ul>
+          <li>
+            <a href="#">Информация</a>
+          </li>
+          <li>
+            <a href="#">Новости</a>
+          </li>
+          <li>
+            <a href="#">Прайс-лист</a>
+          </li>
+          <li>
+            <a href="#">Магазин</a>
+          </li>
+          <li>
+            <a href="#">Контакты</a>
+          </li>
+        </ul>
+        </nav>
+        <div class="user-block">
+          <a class="login" href="#">Вход</a>
+        </div>
+      </div>
+    </header>
     
     <main class="container">
+      <h1>Набор для путешествий "Baxter of california"</h1>
       <div class="breadcrumbs">
-        <h1>Набор для путешествий "Baxter of california"</h1>
         <ul>
           <li>
             <a href="#">Главная</a>
@@ -54,22 +55,29 @@
         </ul>
       </div>
       <div class="item-gallery">
-        <img src="http://placehold.it/150x100">
-        <img src="http://placehold.it/150x100">
-        <img src="http://placehold.it/150x100">
-        <img src="http://placehold.it/150x100">
+        <img src="img/product9.jpg" alt="Набор для путешествий Baxter of california">
+        <img src="img/product7.jpg" alt="Набор для путешествий Baxter of california">
+        <img src="img/product8.jpg" alt="Набор для путешествий Baxter of california">
+        <img src="img/product10.jpg" alt="Набор для путешествий Baxter of california">
       </div>
       <div class="information">
         <div class="information-up">
-          <p>Есть в наличии</p>
-          <p class="item-article">Артикул: Dexter-AE</p>
-          <p>Travel Kit – необходимый аксессуар во время любого путешествия. В аккуратной кожаной сумке находится все, что нужно для бритья и ухода за кожей во время рабочей поездки или отдыха: средство для умывания, увлажняющий крем, крем для бритья, крем после бритья, шампунь. Набор также может стать отличным подарком.</p>
+          <div class="information-title">
+            <p>Есть в наличии</p>
+            <p class="item-article">Артикул: Dexter-AE</p>
+          </div>
+          <p>Travel Kit – необходимый аксессуар во время любого путешествия. 
+          В аккуратной кожаной сумке находится все, что нужно для бритья и ухода за кожей во время рабочей поездки или отдыха: 
+          средство для умывания, увлажняющий крем, крем для бритья, крем после бритья, шампунь. 
+          Набор также может стать отличным подарком.</p>
           <p class="price">2 900 руб.</p>
-          <a href="#">Купить</a>
+          <div class="buy-btn">
+            <a href="#">Купить</a>
+          </div>
         </div>
         <div class="information-down">
           <h2>В набор входит:</h2>
-          <ul>
+          <ul class="set">
             <li>
               <p>Средство для умывания(50мл)</p>
             </li>
@@ -91,22 +99,24 @@
     </main>
 
     <footer class="main-footer">
-      <div class="container">
-        <div class="footer-contacts">
-          <p>Барбершоп «Бородинский»<br>
-              Адрес: г. Санкт-Петербург, Б. Конюшенная, д. 19/8<br>
-              <a href="#">Как нас найти?</a><br>
-              Телефон: +7 (812) 666-02-66</p>
-        </div>
-        <div class="footer-social">
-          <p>Давайте дружить!</p>
-            <a class="social-btn social-btn-vk" href="#">Вконтакте</a>
-            <a class="social-btn social-btn-fb" href="#">Фейсбук</a>
-            <a class="social-btn social-btn-inst" href="#">Инстаграм</a>
-        </div>
-        <div class="footer-copyright">
-          <p>Разработано:</p>
-              <a class="copyright-btn" href="#">HTML Academy</a>
+      <div class="footer">
+        <div class="container">
+          <div class="footer-contacts">
+            <p>Барбершоп «Бородинский»<br>
+                Адрес: г. Санкт-Петербург, Б. Конюшенная, д. 19/8<br>
+                <a href="#">Как нас найти?</a><br>
+                <a href="tel:+78126660266">Телефон: +7 (812) 666-02-66</a></p>
+          </div>
+          <div class="footer-social">
+            <p>Давайте дружить!</p>
+              <a class="social-btn social-btn-vk" href="#"><img src="img/v.jpg"></a>
+              <a class="social-btn social-btn-fb" href="#"><img src="img/f.jpg"></a>
+              <a class="social-btn social-btn-inst" href="#"><img src="img/ins.jpg"></a>
+          </div>
+          <div class="footer-copyright">
+            <p>Разработано:</p>
+                <a class="copyright-btn" href="#">HTML Academy</a>
+          </div>
         </div>
       </div>
     </footer>
