--- a/catalog.html
+++ b/catalog.html
@@ -2,168 +2,188 @@
 <html lang="ru">
   <head>
     <meta charset="utf-8">
-    <title>HTML Academy: Каталог товаров</title>
+    <title>Барбершоп: Каталог товаров</title>
+    <link href="css/style.css" rel="stylesheet">
   </head>
   <body>
-  	<header class="main-header">
-  		<div class="header-logo">
-  			<img class="logo" src="http://placehold.it/150x100" alt="Барбершоп «Бородинский»">
-  		</div>
-  		<div class="container">
-  			<nav class="main-navigation">
-  			<ul>
-  				<li>
-  					<a href="#">Информация</a>
-  				</li>
-  				<li>
-  					<a href="#">Новости</a>
-  				</li>
-  				<li>
-  					<a href="#">Прайс-лист</a>
-  				</li>
-  				<li>
-  					<a href="#">Магазин</a>
-  				</li>
-  				<li>
-  					<a href="#">Контакты</a>
-  				</li>
-  			</ul>
-  			</nav>
-  			<div class="user-block">
-  				<a class="login" href="#">Вход</a>
-  			</div>
-  		</div>
-  	</header>
-  	<main class="container">
-  		<div class="breadcrumbs">
-  			<h1>Средства для ухода</h1>
-  			<ul>
-  				<li>
-  					<a href="#">Главная</a>
-  				</li>
-  				<li>
-  					<a href="#">Магазин</a>
-  				</li>
-  				<li>
-  					<a href="#">Средства для ухода</a>
-  				</li>
-  			</ul>
-  		</div>
-  		<div class="categories">
-  			<div class="categories-up">
-  				<h2 class="categories-title">Производители:</h2>
-  				<label>
-	  				<input type="checkbox" name="producers-one">
-	  				Baxter of california
-  				</label>
-  				<label>
-	  				<input type="checkbox" name="producers-two">
-	  				Mr Natty
-  				</label>
-  				<label>
-	  				<input type="checkbox" name="producers-three">
-	  				Suavecito
-  				</label>
-  				<label>
-	  				<input type="checkbox" name="producers-four">
-	  				Malin goetz
-  				</label>
-  				<label>
-	  				<input type="checkbox" name="producers-five">
-	  				Murray`s
-  				</label>
-  				<label>
-	  				<input type="checkbox" name="producers-six">
-	  				American crew
-  				</label>
-  			</div>
-  			<div class="categories-down">
-  				<h2 class="categories-title">Группа товаров:</h2>
-  				<label>
-  					<input type="radio" name ="product" value="a" checked>
-  					Бритвенные принадлежности
-  				</label>
-  				<label>
-  					<input type="radio" name ="product" value="b">
-  					Средства для ухода
-  				</label>
-  				<label>
-  					<input type="radio" name ="product" value="c">
-  					Аксессуары
-  				</label>
-  				<a class="categories-btn" href="#">Показать</a>
-  			</div>
-  		</div>
-  		<div class="catalog-items">
-  			<div class="catalog-item">
-  				<img src="http://placehold.it/150x100">
-  				<p>Набор для путешествий<br>
-  				"Baxter of california"</p>
-  				<p class="price">2 900 руб.</p>
-  				<a href="#">Купить</a>
-  			</div>
-  			<div class="catalog-item">
-  				<img src="http://placehold.it/150x100">
-  				<p>Увлажняющий кондиционер<br>
-  				"Baxter of california"</p>
-  				<p class="price">750 руб.</p>
-  				<a href="#">Купить</a>
-  			</div>
-  			<div class="catalog-item">
-  				<img src="http://placehold.it/150x100">
-  				<p>Гель для волос<br>
-  				"Suavecito"</p>
-  				<p class="price">290 руб.</p>
-  				<a href="#">Купить</a>
-  			</div>
-  			<div class="catalog-item">
-  				<img src="http://placehold.it/150x100">
-  				<p>Глина для укладки волос<br>
-  				"American crew"</p>
-  				<p class="price">500 руб.</p>
-  				<a href="#">Купить</a>
-  			</div>
-  			<div class="catalog-item">
-  				<img src="http://placehold.it/150x100">
-  				<p>Гель для волос<br>
-  				"American crew"</p>
-  				<p class="price">300 руб.</p>
-  				<a href="#">Купить</a>
-  			</div>
-  			<div class="catalog-item">
-  				<img src="http://placehold.it/150x100">
-  				<p>Набор для бритья<br>
-  				"Baxter of california"</p>
-  				<p class="price">3 900 руб.</p>
-  				<a href="#">Купить</a>
-  			</div>
-  		</div>
-  		<div class="catalog-btns">
-  			<a href="#">1</a>
-  			<a href="#">2</a>
-  			<a href="#">3</a>
-  			<a href="#">4</a>
-  		</div>
-  	</main>
-  	<footer class="main-footer">
-  		<div class="container">
-  			<div class="footer-contacts">
-	  			<p>Барбершоп «Бородинский»<br>
-	          	Адрес: г. Санкт-Петербург, Б. Конюшенная, д. 19/8<br>
-	          	<a href="#">Как нас найти?</a><br>
-	          	Телефон: +7 (812) 666-02-66</p>
-  			</div>
-  			<div class="footer-social">
-  				<p>Давайте дружить!</p>
-		        <a class="social-btn social-btn-vk" href="#">Вконтакте</a>
-		        <a class="social-btn social-btn-fb" href="#">Фейсбук</a>
-		        <a class="social-btn social-btn-inst" href="#">Инстаграм</a>
-  			</div>
-  			<div class="footer-copyright">
-  				<p>Разработано:</p>
-          		<a class="copyright-btn" href="#">HTML Academy</a>
-  			</div>
-  		</div>
-  	</footer>
+    <header class="main-header">
+      <div class="container clearfix">
+        <div class="header-logo">
+          <a class="logo"><img src="img\Logo.png"></a> 
+        </div>
+        <nav class="main-navigation">
+          <ul>
+           <li><a href="#">Информация</a></li>
+            <li><a href="#">Новости</a></li>
+            <li><a href="#">Прайс-лист</a></li>
+            <li><a href="#">Магазин</a></li>
+            <li><a href="#">Контакты</a></li>
+          </ul>
+        </nav>
+        <div class="user-block">
+          <a class="login" href="#">Вход</a>
+        </div>
+      </div>
+    </header>
+    <main class="container clear">
+      <div class="shop">
+        <h1 class="main-title">Средства для ухода</h1>
+        <div class="breadcrumbs">
+         <ul>
+          <li><a href="#">Главная</a></li>
+          <li><a href="#">Магазин</a></li>
+          <li><a href="#">Средства для ухода</a></li>
+        </ul>
+        </div>
+        <div class="categories">
+          <form action="#" method="post">
+            <div class="categories-up">
+             <h2 class="categories-title">Производители:</h2>
+             <ul class="products">
+                <li>
+                  <label for="producers-one">Baxter of california</label>
+                  <input type="checkbox" name="producers">
+                </li>
+                <li>
+                  <label for="producers-two">Mr Natty</label>
+                  <input type="checkbox" name="producers" id="producers-one">
+                </li>
+                <li>
+                  <label for="producers-three">Suavecito</label>
+                  <input type="checkbox" name="producers" id="producers-two">
+                </li>
+                <li>
+                  <label for="producers-four">Malin goetz</label>
+                  <input type="checkbox" name="producers" id="producers-three">
+                </li>
+                <li>
+                  <label for="producers-five">Murray`s</label>
+                  <input type="checkbox" name="producers" id="producers-four">
+                </li>
+                <li>
+                  <label for="producers-six">American crew</label>
+                  <input type="checkbox" name="producers" id="producers-five">	
+                </li>
+              </ul>
+            </div>
+
+            <div class="categories-down">
+             <h2 class="categories-title">Группа товаров:</h2>
+             <ul>
+              <li>
+               <label for="product-one">Бритвенные<br> принадлежности</label>
+               <input type="radio" name ="product" value="a" id="product-one" checked>
+              </li>
+              <li>
+                 <label for="product-two">Средства для ухода</label>
+                 <input type="radio" name ="product" value="b" id="product-two">
+               </li>
+               <li>
+                 <label for="product-three">Аксессуары</label>
+                 <input type="radio" name ="product" value="c" id="product-three">
+               </li>
+             </ul>
+            </div>
+            <div class="show">
+              <input class="categories-btn" type="submit" name="show" value="Показать">
+            </div>
+          </form>
+        </div>
+        <div class="catalog-items">
+          <div class="catalog-item1">
+            <img src="img\product4.jpg" alt="Набор для путешествий Baxter of california">
+            <p>Набор для путешествий<br>
+              "BAXTER OF CALIFORNIA"</p>
+             <div class="price"> 
+              <p>2 900 руб.</p>
+              </div>
+            <div class="buy-btn">
+              <a href="#">Купить</a>
+            </div>
+          </div>
+          <div class="catalog-item1">
+            <img src="img\product1.jpg" alt="Увлажняющий кондиционер Baxter of california">
+            <p>Увлажняющий кондиционер<br>
+            "BAXTER OF CALIFORNIA"</p>
+            <div class="price"> 
+                <p>750 руб.</p>
+            </div>
+            <div class="buy-btn">
+              <a href="#">Купить</a>
+            </div>
+          </div>
+          <div class="catalog-item1">
+            <img src="img\product5.jpg" alt="Гель для волос Suavecito">
+            <p>Гель для волос<br>
+              "SUAVESTINO"</p>
+            <div class="price"> 
+              <p>290 руб.</p>
+            </div>
+            <div class="buy-btn">
+              <a href="#">Купить</a>
+            </div>
+            </div>
+            <div class="catalog-item2">
+              <img src="img\product2.jpg" alt="Глина для укладки волос American crew">
+              <p>Глина для укладки волос<br>
+                "AMERICAN CREW"</p>
+              <div class="price"> 
+                <p>500 руб.</p>
+              </div>
+              <div class="buy-btn">
+                <a href="#">Купить</a>
+              </div>
+            </div>
+            <div class="catalog-item2">
+              <img src="img\product3.jpg" alt="Гель для волос American crew">
+              <p>Гель для волос<br>
+                "AMERICAN CREW"</p>
+              <div class="price"> 
+                <p>300 руб.</p>
+                </div>
+              <div class="buy-btn">
+                <a href="#">Купить</a>
+              </div>
+            </div>
+            <div class="catalog-item2">
+              <img src="img\product6.jpg" alt="Набор для бритья Baxter of california">
+              <p>Набор для бритья<br>
+              "BAXTER OF CALIFORNIA"</p>
+               <div class="price"> 
+                <p>3 900 руб.</p>
+                </div>
+              <div class="buy-btn">
+                <a href="#">Купить</a>
+              </div>
+            </div>
+          </div>
+        <div class="pagination">
+         <div class="pagination-btn"><a href="#">1</a></div>
+         <div class="pagination-btn"><a href="#">2</a></div>
+         <div class="pagination-btn"><a href="#">3</a></div>
+         <div class="pagination-btn"><a href="#">4</a></div>
+        </div>
+      </div>
+    </main>
+    <footer class="footer clear">
+        <div class="container">
+         <div class="footer-contacts">
+            <p>Барбершоп «Бородинский»<br>
+              Адрес: г. Санкт-Петербург, Б. Конюшенная, д. 19/8<br>
+            <a href="#" style="text-decoration: underline;">Как нас найти?</a><br>
+            <a href="tel:+78126660266">Телефон: +7 (812) 666-02-66</a></p>
+          </div>
+          <div class="footer-social">
+            <p>Давайте дружить!</p>
+            <a class="social-btn social-btn-vk" href="#"><img src="img/v.jpg"></a>
+            <a class="social-btn social-btn-fb" href="#"><img src="img/f.jpg"></a>
+            <a class="social-btn social-btn-inst" href="#"><img src="img/ins.jpg"></a>
+          </div>
+          <div class="footer-copyright">
+            <p>Разработано:</p>
+            <a class="copyright-btn" href="#"><img src="img/htmlacademy.png"></a>
+          </div>
+        </div>
+    </footer>
   </body>
 </html>
