--- a/catalog-item.html
+++ b/catalog-item.html
@@ -2,98 +2,78 @@
 <html lang="ru">
   <head>
     <meta charset="utf-8">
-    <title>HTML Academy: Каталог товаров</title>
+    <title>Барбершоп: набор для путшествия</title>
+    <link href="css/style.css" rel="stylesheet">
   </head>
   <body>
-    <link href="css/style.css" rel="stylesheet">
     <header class="main-header">
-      <div class="header-logo">
-        <a class="logo" href="/">Барбершоп "Бородинский"</a> 
-      </div>
       <div class="container">
+        <div class="header-logo">
+          <a class="logo"><img src="img\Logo.png"></a> 
+        </div>
         <nav class="main-navigation">
-        <ul>
-          <li>
-            <a href="#">Информация</a>
-          </li>
-          <li>
-            <a href="#">Новости</a>
-          </li>
-          <li>
-            <a href="#">Прайс-лист</a>
-          </li>
-          <li>
-            <a href="#">Магазин</a>
-          </li>
-          <li>
-            <a href="#">Контакты</a>
-          </li>
-        </ul>
+          <ul>
+            <li><a href="#">Информация</a></li>
+            <li><a href="#">Новости</a></li>
+            <li><a href="#">Прайс-лист</a></li>
+            <li><a href="#">Магазин</a></li>
+            <li><a href="#">Контакты</a></li>
+          </ul>
         </nav>
         <div class="user-block">
           <a class="login" href="#">Вход</a>
         </div>
       </div>
     </header>
-    
+
     <main class="container">
-      <h1>Набор для путешествий "Baxter of california"</h1>
+      <h1 class="main-title">Набор для путешествий "Baxter of california"</h1>
       <div class="breadcrumbs">
         <ul>
-          <li>
-            <a href="#">Главная</a>
-          </li>
-          <li>
-            <a href="#">Прайс-лист</a>
-          </li>
-          <li>
-            <a href="#">Средства для ухода</a>
-          </li>
-          <li>
-            <a href="#">Набор для путешествий "Baxter of california"</a>
-          </li>
+          <li><a href="#">Главная</a></li>
+          <li><a href="#">Прайс-лист</a></li>
+          <li><a href="#">Средства для ухода</a></li>
+          <li><a href="#">Набор для путешествий "Baxter of california"</a></li>
         </ul>
       </div>
-      <div class="item-gallery">
-        <img src="img/product9.jpg" alt="Набор для путешествий Baxter of california">
-        <img src="img/product7.jpg" alt="Набор для путешествий Baxter of california">
-        <img src="img/product8.jpg" alt="Набор для путешествий Baxter of california">
-        <img src="img/product10.jpg" alt="Набор для путешествий Baxter of california">
-      </div>
-      <div class="information">
-        <div class="information-up">
-          <div class="information-title">
-            <p>Есть в наличии</p>
-            <p class="item-article">Артикул: Dexter-AE</p>
-          </div>
-          <p>Travel Kit – необходимый аксессуар во время любого путешествия. 
-          В аккуратной кожаной сумке находится все, что нужно для бритья и ухода за кожей во время рабочей поездки или отдыха: 
-          средство для умывания, увлажняющий крем, крем для бритья, крем после бритья, шампунь. 
-          Набор также может стать отличным подарком.</p>
-          <p class="price">2 900 руб.</p>
-          <div class="buy-btn">
-            <a href="#">Купить</a>
-          </div>
+      <div class="main-page">
+        <div class="item-gallery">
+          <img src="img/product9.jpg" alt="Набор для путешествий Baxter of california">
+          <img src="img/product7.jpg" alt="Набор для путешествий Baxter of california">
+          <img src="img/product8.jpg" alt="Набор для путешествий Baxter of california">
+          <img src="img/product10.jpg" alt="Набор для путешествий Baxter of california">
         </div>
-        <div class="information-down">
-          <h2>В набор входит:</h2>
-          <ul class="set">
-            <li>
-              <p>Средство для умывания(50мл)</p>
-            </li>
-            <li>
-              <p>Увлажняющий крем(50мл)</p>
-            </li>
-            <li>
-              <p>Крем для бритья(50мл)</p>
-            </li>
-            <li>
-              <p>Крем после бритья, шампунь(50мл)</p>
-            </li>
-            <li>
-              <p>Удобная кожаная косметичка</p>
-            </li>
-          </ul>
+        <div class="information">
+          <div class="information-up">
+            <div class="information-title">
+              <p>Есть в наличии</p>
+            </div>
+            <div class="item-article">
+              <p>Артикул: Dexter-AE</p>
+            </div>
+            <div class="product-info">
+              <p>Travel Kit – необходимый аксессуар во время любого путешествия. 
+              В аккуратной кожаной сумке находится все, что нужно для бритья и ухода за кожей во время рабочей поездки или отдыха: 
+              средство для умывания, увлажняющий крем, крем для бритья, крем после бритья, шампунь. 
+              Набор также может стать отличным подарком.</p>
+            </div>
+            <div class="price">
+              <p>2 900 руб.</p>
+            </div>
+            <div class="buy-btn">
+              <a href="#">Купить</a>
+            </div>
+          </div>
+          <div class="information-down">
+            <h2>В набор входит:</h2>
+            <ul class="set">
+              <li><p>Средство для умывания(50мл)</p></li>
+              <li><p>Увлажняющий крем(50мл)</p></li>
+              <li><p>Крем для бритья(50мл)</p></li>
+              <li><p>Крем после бритья, шампунь(50мл)</p></li>
+              <li><p>Удобная кожаная косметичка</p></li>
+            </ul>
+          </div>
         </div>
       </div>
     </main>
@@ -103,19 +83,19 @@
         <div class="container">
           <div class="footer-contacts">
             <p>Барбершоп «Бородинский»<br>
-                Адрес: г. Санкт-Петербург, Б. Конюшенная, д. 19/8<br>
-                <a href="#">Как нас найти?</a><br>
-                <a href="tel:+78126660266">Телефон: +7 (812) 666-02-66</a></p>
+              Адрес: г. Санкт-Петербург, Б. Конюшенная, д. 19/8<br>
+            <a href="#" style="text-decoration: underline;">Как нас найти?</a><br>
+            <a href="tel:+78126660266">Телефон: +7 (812) 666-02-66</a></p>
           </div>
           <div class="footer-social">
             <p>Давайте дружить!</p>
-              <a class="social-btn social-btn-vk" href="#"><img src="img/v.jpg"></a>
-              <a class="social-btn social-btn-fb" href="#"><img src="img/f.jpg"></a>
-              <a class="social-btn social-btn-inst" href="#"><img src="img/ins.jpg"></a>
+            <a class="social-btn social-btn-vk" href="#"><img src="img/v.jpg"></a>
+            <a class="social-btn social-btn-fb" href="#"><img src="img/f.jpg"></a>
+            <a class="social-btn social-btn-inst" href="#"><img src="img/ins.jpg"></a>
           </div>
           <div class="footer-copyright">
             <p>Разработано:</p>
-                <a class="copyright-btn" href="#">HTML Academy</a>
+            <a class="copyright-btn" href="#"><img src="img/htmlacademy.png"></a>
           </div>
         </div>
       </div>
